# crates-pro-github-sync-tool

./: Cargo.toml  README.md  config.sample.json
src/: config.rs  contributor_analysis.rs  github_api.rs  main.rs  main.rs.old
src/entities/: contributor_location.rs  github_user.rs  mod.rs  program.rs  repository_contributor.rs
src/migrations/: m20240101_000001_create_tables.rs  m20240401_000001_modify_column_types.rs  m20240512_000001_fix_repository_id_type.rs  mod.rs
src/services/: database.rs  github_api.rs  mod.rs
